secondary nav wrap fix

--- a/css/device-large.css
+++ b/css/device-large.css
@@ -7,11 +7,6 @@ nav {
     background-color: #131921;
 }
 
-/* .sticky-nav {
-    display: none;
-    background-color: ;
-} */
-
 .primary-nav {
     width: 100%;
     background-color: #131921;
@@ -20,8 +15,6 @@ nav {
     flex-flow: row nowrap;
     height: 60px;
     line-height: 12px;
-    /* position: fixed;
-    top: 0; */
 }
 
 .nav-left {
@@ -130,7 +123,6 @@ nav {
 
 .nav-center {
     height: 60px;
-    /* flex: 1 1 auto; */
 }
 
 .search-bar {
@@ -144,7 +136,6 @@ nav {
 .search-bar .select-container {
     height: 40px;
     width: 150.63px;
-    /* padding: 0 0 0 5px; */
 }
 
 .select-container .select-wrapper {
@@ -172,8 +163,6 @@ nav {
 
 .input-container {
     height: 40px;
-    /* width: auto; */
-    /* flex: 1 1 auto; */
 }
 
 .input-container input {
@@ -251,7 +240,6 @@ nav {
     padding-left: 11px;
     display: flex;
     align-items: center;
-    /* margin-top: 60px; */
 }
 
 .secondary-left {
@@ -286,68 +274,64 @@ nav {
     font-size: 14px;
     line-height: 12px;
     font-weight: bold;
-    /* letter-spacing: 0.5px; */
     font-family: "Amazon-Ember-Bold";
     color: var(--text-color-white);
 }
 
 .secondary-right {
+    max-height: 39px;
     display: flex;
+    width: 100%;
+    flex: 1 1 auto;
 }
 
 .secondary-right .items-wrapper {
-    height: inherit;
     display: flex;
-    flex-wrap: nowrap;
-    text-wrap-mode: nowrap;
+    flex: 1 1 auto;
+    flex-flow: row wrap;
+    padding-left: 0;
+    max-height: 39px;
+    align-items: flex-end;
     overflow: hidden;
 }
 
 .secondary-right .items-wrapper ul {
-    width: 100%;
     display: flex;
-    justify-content: space-evenly;
+    padding: 0;
     align-items: center;
-    height: 39px;
-    /* flex-wrap: wrap; */
-    text-wrap-mode: nowrap;
-    overflow: hidden;
+    flex-wrap: wrap;
 }
 
-
-.items-wrapper ul li a {
-    font-size: 14px;
+.secondary-right .items-wrapper ul li {
+    font-size: 12px;
     line-height: 12px;
-    margin: 5px 0 6px 0;
-    padding: 8px 10px;
-    height: 12px;
 }
 
-
-.drop-down-link-wrapper {
+.secondary-right .items-wrapper ul li div {
     display: flex;
+    padding: 0 5px;
+    vertical-align: middle;
+    height: 100%;
     justify-content: center;
-    align-items: center;
-    height: 39px;
-    padding-right: 5px;
+    align-items: start;
 }
 
-.drop-down-link-wrapper .drop-down-link-button {
+.secondary-right .items-wrapper ul li div a {
+    font-size: 14px;
+    margin: 5px 0 6px 0;
+    padding: 8px 5px;
+    /* height: 12px; */
+}
+
+.drop-down-link-button {
     border-width: 4px;
     border-color: transparent;
     border-top: 4px solid #a7acb2;
     border-bottom-width: 0;
     width: 8px;
     background-color: #232f3e;
-    margin-top: 1px;
+    margin-top: 18px;
 }
-
-
-.drop-down-link-wrapper .drop-down-link-text {
-    margin: 0;
-    padding: 0 5px 0 10px;
-}
-
 
 .tertiary-nav {
     width: 100%;
